feat: create B2B service
